Prevent table from overflowing

--- a/symfony/sass/elements/_standard-table.scss
+++ b/symfony/sass/elements/_standard-table.scss
@@ -1,4 +1,5 @@
 .standard-table {
   border-collapse: collapse;
   border-spacing: 0;
+  word-break: break-all;
 }
